Created API for Expense model using Django REST Framework Created serializer for Expense model. Implemented CRUD operations via ViewSet. Set up routes for API endpoints. Tested API via Postman for GET, POST, PATCH, DELETE operations.

--- a/expense_tracker/templates/expense_list.html
+++ b/expense_tracker/templates/expense_list.html
@@ -8,9 +8,10 @@
     <li class="list-group-item d-flex justify-content-between">
         <div>
             <strong>{{ expense.name }}</strong><br>
-            {{ expense.amount }}
-            {{ expense.category }}
-            {{ expense.date }}
+            Cost: {{ expense.amount }},
+            ({{ expense.category }}),
+            {{ expense.date }},
+            Type: {{ expense.type }}
         </div>
         <div>
             <a href="{% url 'expense-update' expense.pk %}" class="btn btn-warning btn-sm">Edit</a>
