--- a/expense_tracker/templates/base.html
+++ b/expense_tracker/templates/base.html
@@ -1,14 +1,54 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Expense Tracker</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-<body>
-    <div class="container mt-5">
+<body class="bg-light">
+
+    <!-- Навбар -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="{% url 'expense-list' %}">💰 Expense Tracker</a>
+          <div class="collapse navbar-collapse">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'about' %}">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'expense-list' %}">Expenses</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'stats' %}">Stats</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+              </li>
+            </ul>
+            <form class="d-flex" method="post" action="{% url 'logout' %}">
+              {% csrf_token %}
+              <button class="btn logout-btn" type="submit">Logout</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+
+      
+
+    <!-- Контент -->
+    <div class="container mt-4">
         {% block content %}
         {% endblock %}
     </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
