--- a/expense_tracker/templates/expense_form.html
+++ b/expense_tracker/templates/expense_form.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
-<h2>{{ view.object.pk|yesno:"Edit Expense,Create Expense" }}</h2>
+<h2 class="heading">{{ view.object.pk|yesno:"Edit Expense,Create Expense" }}</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-success">Save</button>
+    <a href="{% url 'expense-list' %}" class="btn btn-danger">Back</a>
 </form>
-<a href="{% url 'expense-list' %}" class="btn btn-secondary mt-2">Back</a>
 {% endblock %}
