--- a/expense_tracker/templates/login.html
+++ b/expense_tracker/templates/login.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% block content %}
 <h2>Log in</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
+  <p>It you don't have an account, you can <a href="{% url 'register' %}">register here</a>.</p>
   <button type="submit" class="btn btn-success">Log in</button>
 </form>
 {% endblock %}
