--- a/expense_tracker/templates/register.html
+++ b/expense_tracker/templates/register.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% block content %}
-<h2>Registration</h2>
+<h2 class="heading">Registration</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit" class="btn btn-primary">Register</button>
+  <button type="submit" class="btn btn-success">Register</button>
 </form>
 {% endblock %}
