Refactor: added user field to Expense, updated tests and UI Filtered records by logged-in user Redirect to login if unauthorized Conditional display for logout button Styled expenses/incomes differently by type

--- a/expense_tracker/static/css/style.css
+++ b/expense_tracker/static/css/style.css
@@ -115,6 +115,13 @@ body {
   margin-bottom: 5px;
 }
 
+.income_name {
+  color: #198754;
+  font-weight: 700;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
 .expense_category {
   display: block;
   padding: 2px 0px;
