--- a/expense_tracker/templates/expense_list.html
+++ b/expense_tracker/templates/expense_list.html
@@ -3,22 +3,44 @@
 
 {% block content %}
 <h2 class="heading">Expenses List</h2>
-<a href="{% url 'expense-create' %}" class="btn btn-success mb-3"><i class="fas fa-plus" style="color: white; font-size: 16px;"></i> Add Expense</a>
-<ul class="list-group">
-    {% for expense in expenses %}
-    <li class="list-group-item d-flex justify-content-between expense_type">
-        <div>
-            <span class="expense_name">{{ expense.name }}</span>
-            <span style="display: block;">Cost: {{ expense.amount }}</span>
-            <span class="expense_category">{{ expense.category }}</span>
-            {{ expense.date }}
-            Type: {{ expense.type }}
-        </div>
-        <div class="d-flex gap-2 align-items-center">
-            <a href="{% url 'expense-update' expense.pk %}" class="btn edit_btn"><i class="fas fa-pencil-alt" style="font-size: 16px;"></i></a>
-            <a href="{% url 'expense-delete' expense.pk %}" class="btn delete_btn"><i class="fas fa-trash" style="font-size: 16px;"></i></a>
-        </div>
-    </li>
-    {% endfor %}
-</ul>
+
+{% if user.is_authenticated %}
+    <a href="{% url 'expense-create' %}" class="btn btn-success mb-3">
+        <i class="fas fa-plus" style="color: white; font-size: 16px;"></i> Add Expense or Income
+    </a>
+    <ul class="list-group">
+        {% for expense in expenses %}
+        <li class="list-group-item d-flex justify-content-between 
+            {% if expense.type == 'expense' %}
+                expense_type
+            {% else %}
+                income_type
+            {% endif %}
+        ">
+            <div>
+                <span class="{% if expense.type == 'expense' %}expense_name{% else %}income_name{% endif %}">
+                    {{ expense.name }}
+                </span> - {{ expense.amount }} тг
+                <span class="expense_category">Category: {{ expense.category }}</span>
+                {{ expense.date }}
+                Type: {{ expense.type }}
+            </div>
+            <div class="d-flex gap-2 align-items-center">
+                <a href="{% url 'expense-update' expense.pk %}" class="btn edit_btn">
+                    <i class="fas fa-pencil-alt" style="font-size: 16px;"></i>
+                </a>
+                <a href="{% url 'expense-delete' expense.pk %}" class="btn delete_btn">
+                    <i class="fas fa-trash" style="font-size: 16px;"></i>
+                </a>
+            </div>
+        </li>
+        {% empty %}
+        <li class="list-group-item">No expenses found.</li>
+        {% endfor %}
+    </ul>
+{% else %}
+    <div class="alert alert-warning" role="alert">
+        Please <a href="{% url 'login' %}">log in</a> to view your expenses.
+    </div>
+{% endif %}
 {% endblock %}
