--- a/expense_tracker/templates/base.html
+++ b/expense_tracker/templates/base.html
@@ -1,9 +1,10 @@
 {% load static %}
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Expense Tracker</title>
+    <title>{% trans "Expense Tracker" %}</title> <!-- обернул title -->
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -16,36 +17,39 @@
     <!-- Навбар -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'expense-list' %}">💰 Expense Tracker</a>
+          <a class="navbar-brand" href="{% url 'expense-list' %}">💰 {% trans "Expense Tracker" %}</a>
           <div class="collapse navbar-collapse">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'about' %}">About</a>
+                <a class="nav-link" href="{% url 'about' %}">{% trans "About" %}</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'expense-list' %}">Expenses</a>
+                <a class="nav-link" href="{% url 'expense-list' %}">{% trans "Expenses" %}</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'stats' %}">Stats</a>
+                <a class="nav-link" href="{% url 'stats' %}">{% trans "Stats" %}</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                <a class="nav-link" href="{% url 'profile' %}">{% trans "Profile" %}</a>
               </li>
             </ul>
-            <form class="d-flex" method="post" action="{% url 'logout' %}">
+            <!-- Переключатель языка -->
+          <form action="{% url 'set_language' %}" method="post" class="d-flex me-2">
               {% csrf_token %}
-                {% if user.is_authenticated %}
-                    <form class="d-flex" method="post" action="{% url 'logout' %}">
-                        {% csrf_token %}
-                        <button class="btn logout-btn" type="submit">Logout</button>
-                    </form>
-                {% endif %}
-            </form>
+              <select name="language" onchange="this.form.submit()" class="form-select">
+                  <option value="en" {% if request.LANGUAGE_CODE == 'en' %}selected{% endif %}>EN</option>
+                  <option value="ru" {% if request.LANGUAGE_CODE == 'ru' %}selected{% endif %}>RU</option>
+              </select>
+          </form>
+            {% if user.is_authenticated %}
+                <form class="d-flex" method="post" action="{% url 'logout' %}">
+                    {% csrf_token %}
+                    <button class="btn logout-btn" type="submit">{% trans "Logout" %}</button>
+                </form>
+            {% endif %}
           </div>
         </div>
       </nav>
-
-      
 
     <!-- Контент -->
     <div class="container mt-4">
