--- a/expense_tracker/templates/edit_profile.html
+++ b/expense_tracker/templates/edit_profile.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 
 {% block content %}
-<h2>Edit Profile</h2>
+<h2>{% trans "Edit Profile" %}</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit" class="btn btn-success">Save</button>
+  <button type="submit" class="btn btn-success">{% trans "Save" %}</button>
 </form>
 {% endblock %}
