--- a/expense_tracker/templates/expense_confirm_delete.html
+++ b/expense_tracker/templates/expense_confirm_delete.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 
 {% block content %}
-<h2>Confirm Delete</h2>
-<p>Are you sure you want to delete "{{ object }}"?</p>
+<h2>{% trans "Confirm Delete" %}</h2>
+<p>{% blocktrans %}Are you sure you want to delete "{{ object }}"?{% endblocktrans %}</p>
 <form method="post">
     {% csrf_token %}
-    <button type="submit" class="btn btn-danger">Yes, Delete</button>
-    <a href="{% url 'expense-list' %}" class="btn btn-secondary">Cancel</a>
+    <button type="submit" class="btn btn-danger">{% trans "Yes, Delete" %}</button>
+    <a href="{% url 'expense-list' %}" class="btn btn-secondary">{% trans "Cancel" %}</a>
 </form>
 {% endblock %}
