--- a/expense_tracker/templates/expense_form.html
+++ b/expense_tracker/templates/expense_form.html
@@ -1,12 +1,17 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 
 {% block content %}
-<h2 class="heading">{{ view.object.pk|yesno:"Edit Expense,Create Expense" }}</h2>
+<h2 class="heading">
+  {% with edit="Edit Expense" create="Create Expense" %}
+    {{ view.object.pk|yesno:edit|add:','|add:create }}
+  {% endwith %}
+</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-success">Save</button>
-    <a href="{% url 'expense-list' %}" class="btn btn-danger">Back</a>
+    <button type="submit" class="btn btn-success">{% trans "Save" %}</button>
+    <a href="{% url 'expense-list' %}" class="btn btn-danger">{% trans "Back" %}</a>
 </form>
 {% endblock %}
