--- a/expense_tracker/templates/expense_list.html
+++ b/expense_tracker/templates/expense_list.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 
 {% block content %}
-<h2 class="heading">Expenses List</h2>
+<h2 class="heading">{% trans "Expenses List" %}</h2>
 
 {% if user.is_authenticated %}
     <a href="{% url 'expense-create' %}" class="btn btn-success mb-3">
-        <i class="fas fa-plus" style="color: white; font-size: 16px;"></i> Add Expense or Income
+        <i class="fas fa-plus" style="color: white; font-size: 16px;"></i> {% trans "Add Expense or Income" %}
     </a>
     <ul class="list-group">
         {% for expense in expenses %}
@@ -21,9 +22,9 @@
                 <span class="{% if expense.type == 'expense' %}expense_name{% else %}income_name{% endif %}">
                     {{ expense.name }}
                 </span> - {{ expense.amount }} тг
-                <span class="expense_category">Category: {{ expense.category }}</span>
+                <span class="expense_category">{% trans "Category" %}: {{ expense.category }}</span>
                 {{ expense.date }}
-                Type: {{ expense.type }}
+                {% trans "Type" %}: {{ expense.type }}
             </div>
             <div class="d-flex gap-2 align-items-center">
                 <a href="{% url 'expense-update' expense.pk %}" class="btn edit_btn">
@@ -35,12 +36,12 @@
             </div>
         </li>
         {% empty %}
-        <li class="list-group-item">No expenses found.</li>
+        <li class="list-group-item">{% trans "No expenses found." %}</li>
         {% endfor %}
     </ul>
 {% else %}
     <div class="alert alert-warning" role="alert">
-        Please <a href="{% url 'login' %}">log in</a> to view your expenses.
+        {% trans "Please" %} <a href="{% url 'login' %}">{% trans "log in" %}</a> {% trans "to view your expenses." %}
     </div>
 {% endif %}
 {% endblock %}
