--- a/expense_tracker/templates/login.html
+++ b/expense_tracker/templates/login.html
@@ -1,12 +1,18 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 
 {% block content %}
-<h2>Log in</h2>
+<h2>{% trans "Log in" %}</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <p>It you don't have an account, you can <a href="{% url 'register' %}">register here</a>.</p>
-  <button type="submit" class="btn btn-success">Log in</button>
+  {% url 'register' as register_url %}
+  <p>
+    {% blocktrans with register_url=register_url %}
+      If you don't have an account, you can <a href="{{ register_url }}">register here</a>.
+    {% endblocktrans %}
+  </p>
+  <button type="submit" class="btn btn-success">{% trans "Log in" %}</button>
 </form>
 {% endblock %}
