--- a/expense_tracker/templates/register.html
+++ b/expense_tracker/templates/register.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 
 {% block content %}
-<h2 class="heading">Registration</h2>
+<h2 class="heading">{% trans "Registration" %}</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit" class="btn btn-success">Register</button>
+  <button type="submit" class="btn btn-success">{% trans "Register" %}</button>
 </form>
 {% endblock %}
