feat: add dynamic multilingual support for expense and category names and types

--- a/expense_tracker/templates/expense_form.html
+++ b/expense_tracker/templates/expense_form.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h2 class="heading">
   {% with edit="Edit Expense" create="Create Expense" %}
-    {{ view.object.pk|yesno:edit|add:','|add:create }}
+    {{ view.object.pk|yesno:edit|add:''|add:create }}
   {% endwith %}
 </h2>
 <form method="post">
